Introduced hard fixes for layout problems

--- a/src/modules/ngx-daterange/src/components/calendar/calendar.component.scss
+++ b/src/modules/ngx-daterange/src/components/calendar/calendar.component.scss
@@ -13,6 +13,11 @@
     font-size: 16px;
     margin: 0.5rem -15px 0 -15px;
 
+    .btn, .btn-link {
+      min-width: 60px;
+      width: 60px;
+    }
+
     &.material {
       .btn {
         &.btn-previous-year {
